Wallmount construction, tabletop fixes

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -325,6 +325,8 @@
     prototype: ComputerRadar
   - type: ComputerTabletopBoard # Frontier
     prototype: ComputerTabletopRadar # Frontier
+  - type: ComputerWallmountBoard # Frontier
+    prototype: ComputerWallmountRadar # Frontier
   - type: Tag # Frontier
     tags: # Frontier
     - DroneUsable # Frontier
@@ -341,6 +343,8 @@
     prototype: ComputerAdvancedRadar
   - type: ComputerTabletopBoard # Frontier
     prototype: ComputerTabletopAdvancedRadar # Frontier
+  - type: ComputerWallmountBoard # Frontier
+    prototype: ComputerWallmountAdvancedRadar # Frontier
   - type: Tag # Frontier
     tags: # Frontier
     - DroneUsable # Frontier
