--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -13,6 +13,7 @@
   - ShipyardBookworm
   - ShipyardBrigand
   - ShipyardBulker
+  - ShipyardCaladrius
   - ShipyardCamper
   - ShipyardCeres
   - ShipyardChisel
@@ -91,6 +92,11 @@
   id: ShipyardBulker
   name: guide-entry-shipyard-bulker
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Bulker.xml"
+  
+- type: guideEntry
+  id: ShipyardCaladrius
+  name: guide-entry-shipyard-caladrius
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Caladrius.xml"
 
 - type: guideEntry
   id: ShipyardCamper
