Японские изменения | Ребаланс (#72)
* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Add files via upload

* Update meal_recipes.yml

* Add files via upload

* Add files via upload

* Delete Resources/Textures/Corvax/Objects/Consumable/Food/ingredients.rsi/doughdangoball.png

* Add files via upload

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/Ingredients/dangodough.yml

* Add files via upload

* Update meal_recipes.yml

* Add files via upload

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/chocopocky.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/hanamidango.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/mitarasidango.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/onigiri.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/porkramennoodles.yml

* Add files via upload

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/spicyporkramen.yml

* Add files via upload

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/Ingredients/boileddangodough.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/Ingredients/rawdangodough.yml

* Delete Resources/Prototypes/Corvax/Entities/Objects/Consumable/Food/japanfood/Ingredients/rawramennoodles.yml

* Update ingredients.yml

* Update food.yml

* Update japaningredients.ftl

* Update japanfoods.ftl

* Update food.yml

* Update meal_recipes.yml

* Update meal_recipes.yml

* Update food.yml

* Update japanfoods.ftl

* Update japaningredients.ftl

* Update food.yml

* Update ingredients.yml

* Update food.yml

* Update meal_recipes.yml

* Update food.yml

* Update meal_recipes.yml



--- a/Resources/Prototypes/Corvax/Recipes/Cooking/JapanFood/ingredients/food.yml
+++ b/Resources/Prototypes/Corvax/Recipes/Cooking/JapanFood/ingredients/food.yml
@@ -1,5 +1,5 @@
 - type: reaction
-  id: CreateDangoDough
+  id: createrawdangodough
   impact: Low
   quantized: true
   conserveEnergy: false
@@ -12,16 +12,16 @@
       amount: 5
   effects:
     - !type:CreateEntityReactionEffect
-      entity: Doughdangoball
+      entity: RawDoughDangoBall
 
 - type: reaction
-  id: CreateRawRamen
+  id: createrawramen
   impact: Low
   quantized: true
   conserveEnergy: false
   reactants:
     Flour:
-      amount: 10 
+      amount: 5 
     TableSalt:
       amount: 5
     OilOlive:
@@ -32,4 +32,4 @@
       amount: 5
   effects:
     - !type:CreateEntityReactionEffect
-      entity: rawramennoodles
+      entity: RawRamenNoodles
