--- a/Resources/Prototypes/Corvax/Recipes/Cooking/JapanFood/meal_recipes.yml
+++ b/Resources/Prototypes/Corvax/Recipes/Cooking/JapanFood/meal_recipes.yml
@@ -1,13 +1,13 @@
 - type: microwaveMealRecipe
   id: Recipeporkramen
   name: pork ramen recipe
-  result: porkramennoodles
-  time: 15
+  result: PorkRamenNoodles
+  time: 30
   solids:
     FoodMeatCutlet: 3
     FoodBowlBig: 1
     FoodGarlic: 1
-    rawramennoodles: 1
+    RawRamenNoodles: 1
   reagents:
     Water: 15
     Egg: 6
@@ -16,49 +16,50 @@
 - type: microwaveMealRecipe
   id: Recipehanamidango
   name: dango hanami recipe
-  result: hanamidango
-  time: 10
+  result: HanamiDango
+  time: 15
   reagents:
     GreenTea: 5
     JuiceWatermelon: 5
   solids:
-    Doughdangoball: 3
-  recipeType: Oven # Frontier	
+    BoiledDoughDangoBall: 3
+  recipeType: Assembler # Frontier	
 
 - type: microwaveMealRecipe
   id: Recipemitarashidango
   name: dango mitarashi recipe
-  result: mitarashidango
-  time: 10
+  result: MitarashiDango
+  time: 15
   reagents:
     Soysauce: 5
     Sugar: 5
   solids:
-    Doughdangoball: 3
-  recipeType: Oven # Frontier
+    BoiledDoughDangoBall: 3
+  recipeType: Assembler # Frontier
 
 - type: microwaveMealRecipe
   id: Recipeonigiri
   name: onigiri recipe
-  result: onigiri
-  time: 20
+  result: Onigiri
+  time: 15
   reagents:
     Mayo: 5
-    Rice: 10
+    OilOlive: 5
   solids:
-    FoodMeatChicken: 1
+    FoodMeatChickenCutletCooked: 3
+    FoodRiceBoiled: 1
   recipeType: Oven # Frontier
 
 - type: microwaveMealRecipe
   id: Recipespicyramen
   name: spicy ramen recipe
-  result: spicyporkramennoodles
-  time: 20
+  result: SpicyPorkRamenNoodles
+  time: 30
   solids:
     FoodMeatCutlet: 3
     FoodBowlBig: 1
     FoodGarlic: 1
-    rawramennoodles: 1
+    RawRamenNoodles: 1
     FoodChiliPepper: 1
   reagents:
     Water: 15
@@ -66,3 +67,13 @@
     Hotsauce: 5
   recipeType: Oven # Frontier
 
+- type: microwaveMealRecipe
+  id: Recipboileddoughdangoball
+  name: boiled dough dango ball recipe
+  result: BoiledDoughDangoBall
+  time: 10
+  solids:
+    RawDoughDangoBall: 1
+  reagents:
+    Water: 10
+  recipeType: Oven # Frontier	
