no individual flares

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
@@ -9,7 +9,7 @@
     Pickaxe: 10 # Frontier: 4<10
     OreBag: 6 # Frontier: 2<6
     Floodlight: 10 # Frontier
-    Flare: 20 # Frontier: 4<20
+    # Flare: 20 # Frontier: 4<20, commented out
     BoxDispenserFlare: 5 # Frontier
     FlashlightLantern: 15 # Frontier: 2<15
     HandheldGPSBasic: 15 # Frontier: 2<15
