--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -220,6 +220,15 @@
   - type: WarpPoint
     location: Dungeon (Rock)
 
+- type: entity
+  id: WarpPointNFDengeonChromite
+  parent: WarpPoint
+  suffix: Dungeon, Chromite
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Chromite)
+
 # DeadDrop
 - type: entity
   id: WarpPointNFSyndicateSupplyDrop
