noisy, kind of hacky radio messages for events

--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BluespaceDungeonBase
   parent: BaseStationEventShortDelay
-  name: NT
+  name: NT Bluespace Monitoring # This name shows up in the radio messages.
   categories: [ HideSpawnMenu ]
   components:
   - type: StationEvent
