--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
@@ -217,10 +217,10 @@
   id: SalvageEquipmentRare
   table: !type:GroupSelector
     children:
-    - id: FultonBeacon
-    - id: Fulton
-      amount: !type:RangeNumberSelector
-        range: 1, 3
+#    - id: FultonBeacon # Frontier
+#    - id: Fulton # Frontier
+#      amount: !type:RangeNumberSelector # Frontier
+#        range: 1, 3 # Frontier
     - id: HandHeldMassScanner
     - id: WeaponCrusherDagger
     - id: MiningDrill
@@ -234,15 +234,15 @@
     - !type:GroupSelector
       children:
       - id: JetpackBlue
-      - id: JetpackBlack
+#      - id: JetpackBlack # Frontier
 
 - type: entityTable
   id: SalvageEquipmentLegendary
   table: !type:GroupSelector
     children:
     - id: AdvancedMineralScanner
-    - id: BlueprintFulton
-    - id: BlueprintSeismicCharge
+#    - id: BlueprintFulton # Frontier
+#    - id: BlueprintSeismicCharge # Frontier
     - id: WeaponCrusherGlaive
     - id: ClothingOuterHardsuitSalvage
     - id: OmnizineChemistryBottle
