--- a/Resources/Prototypes/Procedural/Themes/experiment.yml
+++ b/Resources/Prototypes/Procedural/Themes/experiment.yml
@@ -19,7 +19,7 @@
 
 - type: dungeonRoom
   id: Science17x5c
-  size: 17,5
+  size: 19,5 # Frontier 17<19
   atlas: /Maps/_NF/Dungeon/experiment.yml # Frontier
   offset: 36,0
   tags:
