--- a/Resources/Prototypes/_NF/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_NF/GameRules/roundstart.yml
@@ -47,6 +47,7 @@
     children:
     - id: BluespaceDungeonBasalt
     - id: BluespaceDungeonChromite
+    - id: BluespaceDungeonSnow
 
 - type: entity
   id: SmugglingEventScheduler
