--- a/Resources/Maps/_NF/Dungeon/snowy_labs.yml
+++ b/Resources/Maps/_NF/Dungeon/snowy_labs.yml
@@ -7172,6 +7172,8 @@ entities:
     - type: Transform
       pos: 0.5,22.5
       parent: 1653
+    - type: Fixtures
+      fixtures: {}
 - proto: FloraTreeSnow01
   entities:
   - uid: 1133
@@ -7511,7 +7513,7 @@ entities:
     - type: Transform
       pos: 21.5,14.5
       parent: 1653
-- proto: hydroponicsTray
+- proto: hydroponicsTrayAnchored
   entities:
   - uid: 159
     components:
