--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -42,27 +42,27 @@
         protos:
         - NFVGRoidBasalt
 
-# - type: entity
-  # id: BluespaceDungeonSnow
-  # parent: BluespaceDungeonBase
-  # categories: [ HideSpawnMenu ]
-  # components:
-  # - type: BluespaceErrorRule
-    # groups:
-      # vgroid: !type:DungeonSpawnGroup
-        # nameDataset: names_borer
-        # minimumDistance: 1500
-        # maximumDistance: 2500
-        # addComponents:
-        # - type: Gravity
-          # enabled: true
-          # inherent: true
-        # - type: IFF
-        # - type: Shuttle
-          # angularDamping: 999999
-          # linearDamping: 999999
-        # protos:
-        # - NFVGRoidSnow
+- type: entity
+  id: BluespaceDungeonSnow
+  parent: BluespaceDungeonBase
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: BluespaceErrorRule
+    groups:
+      vgroid: !type:DungeonSpawnGroup
+        nameDataset: names_borer
+        minimumDistance: 1500
+        maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
+        - type: IFF
+        - type: Shuttle
+          angularDamping: 999999
+          linearDamping: 999999
+        protos:
+        - NFVGRoidSnow
 
 # - type: entity
   # id: BluespaceDungeonRock
