--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
@@ -218,7 +218,7 @@
   - type: FTLKnockdownImmune
 
 # Inventories
-- type: entity
+- type: entity # All slots are fillable, most of them are "hidden"
   save: false
   id: MobHumanoidInvetory
   abstract: true
@@ -232,7 +232,7 @@
       enum.StrippingUiKey.Key:
         type: StrippableBoundUserInterface
 
-- type: entity
+- type: entity # Slots for loot containers: pockets, belt, back
   save: false
   id: MobHumanoidInvetorySimplified
   abstract: true
@@ -314,7 +314,7 @@
   id: MobHumanoidHostileBase
   components:
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.5
+    baseWalkSpeed : 4.5
     baseSprintSpeed : 4.5
   - type: NPCRetaliation
     attackMemoryLength: 10
@@ -378,7 +378,7 @@
   id: MobNonHumanHostileBase
   components:
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.5
+    baseWalkSpeed : 4.5
     baseSprintSpeed : 4.5
   - type: NPCRetaliation
     attackMemoryLength: 10
