--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
@@ -249,4 +249,4 @@
     - !type:GroupSelector
       children:
       - id: JetpackBlueFilled
-      - id: JetpackBlackFilled
+#      - id: JetpackBlackFilled # Frontier
