--- a/Resources/Prototypes/_NF/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_NF/GameRules/roundstart.yml
@@ -48,6 +48,7 @@
     - id: BluespaceDungeonBasalt
     - id: BluespaceDungeonChromite
     - id: BluespaceDungeonSnow
+    - id: BluespaceDungeonCave
 
 - type: entity
   id: SmugglingEventScheduler
