--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -212,13 +212,13 @@
     location: Dungeon (Snow)
 
 - type: entity
-  id: WarpPointNFDengeonRock
+  id: WarpPointNFDengeonCave
   parent: WarpPoint
-  suffix: Dungeon, Rock
+  suffix: Dungeon, Cave
   categories: [ HideSpawnMenu ]
   components:
   - type: WarpPoint
-    location: Dungeon (Rock)
+    location: Dungeon (Cave)
 
 - type: entity
   id: WarpPointNFDengeonChromite
