--- a/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
@@ -42,8 +42,8 @@
     - !type:OreDunGen
       entityMask:
       - WallRock
-      entity: CaveElementalSpawner
-      count: 200
+      entity: RockElementalSpawner
+      count: 100
       minGroupSize: 1
       maxGroupSize: 1
     # Ores
@@ -106,7 +106,7 @@
     - !type:OreDunGen
       entityMask:
       - WallRock
-      entity: WallCaveCobblebrickNF
+      entity: WallCobblebrickNF
       count: 100
       minGroupSize: 6
       maxGroupSize: 16
@@ -191,7 +191,7 @@
   reserveTiles: true
   data:
     tiles:
-      FallbackTile: FloorCaveDroughtDug
+      FallbackTile: PlatingAsteroid
       WidenTile: FloorCaveDrought
   layers:
   - !type:PrototypeDunGen
