--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -38,6 +38,7 @@
         - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
+        - type: LinkedLifecycleGridParent
         protos:
         - NFVGRoidBasalt
 
@@ -60,6 +61,7 @@
         - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
+        - type: LinkedLifecycleGridParent
         protos:
         - NFVGRoidSnow
 
@@ -82,6 +84,7 @@
         - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
+        - type: LinkedLifecycleGridParent
         protos:
         - NFVGRoidCave
 
@@ -104,5 +107,6 @@
         - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
+        - type: LinkedLifecycleGridParent
         protos:
         - NFVGRoidChromite
